app/assets/stylesheets/projects.css.scss
.header{
  background-color: rgb(250,249,245);
  .hl{
    height:45px;
    max-width: 300px;
    div.project-select{
      cursor: pointer;
      font-weight: bold;
      min-width: 160px;
      margin-left:15px;
      padding-top: 10px;
      a.dropdown-toggle{
        font-size: 18px;
      }
      a:hover{
        text-decoration: none;
      }
      ul.dropdown-menu{
        width: 220px;
        li.project-search{
          border: 1px solid #CCC;
          margin: 0 5px 0 5px;
          input{
            border: 0;
            width: 170px;
            margin: 0;
          }
        }
        li.project-list{
          padding: 2px 10px 2px 5px;
          position: relative;
          overflow: auto;
          max-height: 250px;
          .projects-pending{
            text-align: center;
          }
          .projects-no-match{
            text-align: center;
          }
          .project{
            a{
              display: block;
              padding: 3px 10px;
              clear: both;
              font-weight: normal;
              line-height: 20px;
              color: #333333;
              white-space: nowrap;
            }
          }
          .project.selected{
            a{
              text-decoration: none;
              color: #ffffff;
              background-color: #0081c2;
            }
          }
        }
      }
    }
  }
  .hr{
    margin: 14px 20px 0 0;
    a{
      margin-right: 25px;
    }
    a:hover{
      text-decoration: none;
    }
    .dropdown{
      display: inline-block;
      float: none;
      a{
        margin-right: 0px;
      }
    }
  }
  .navbar-inner{
    background-image: none;
    background-color: white;
    border: none;
  }
}
#container{
  margin-top: -1px;
  border-top: 1px solid;
  border-top-color: rgb(200,200,200);
}
.main{
  border-bottom: 1px solid #CCC;
  outline-style: none;
  margin: 0;
  padding: 0;
}

@mixin highlight-header{
  height: 30px;
  line-height: 30px;
  padding-left: 10px;
  border-top: 1px solid #CCC;
  border-bottom: 1px solid #CCC;
}

div.main{
  position: relative; //todo absolute
  width: 100%;
  height: 100%;
  border-collapse: collapse;
  border: none;
  overflow: hidden;  //todo
  div.left-nav{
    float: left;  // todo not removed from flow
    min-width: 200px;
    max-width: 200px;
    vertical-align: top;
    .dashboard-toggle{
      padding: 5px 8px 5px 5px;
    }
    .reports-nav{
      .accordion-group{
        .accordion-heading{
          .accordion-toggle{
            cursor: pointer;
          }
          .dropdown{
            margin: 8px 10px 0 0;
          }
        }
        .accordion-body{
          .accordion-inner {
            padding: 0px;
            .nav.nav-list{
              overflow: auto;
              max-height: 400px;
              li{
                .dropdown{
                  margin-top: 2px;
                }
              }
            }
          }
        }
        .dropdown{
          float: right;
          .dropdown-toggle{
            display: none;
            width: 18px;
            text-align: center;
            cursor: pointer;
            .caret{
              margin-left: 0px;
            }
          }
        }
      }
      ul li.no-data{
        text-align: center;
        height: 30px;
        padding-top: 10px;
      }
    }

    .reports-controls{
      margin-bottom: 10px;
      text-align: center;
      border-top: 1px solid #CCC;
      .report-control{
        margin-top: 10px;
      }
    }
  }
  div.nav-toggle{
    position: absolute; //todo removed from flow
    float:none;
    left: 200px;
    overflow: hidden; //todo
    background: whiteSmoke;
    border-right: 1px solid #DDD;
    border-left: 1px solid #C8C8C8;
    -webkit-box-shadow: -1px 0 3px rgba(0,0,0,.2);
    -moz-box-shadow: -1px 0 3px rgba(0,0,0,.2);
    box-shadow: -1px 0 3px rgba(0,0,0,.2);
    cursor: w-resize;
    height: 100%;
    -moz-transition: all 130ms ease-in-out;
    -webkit-transition: all 130ms ease-in-out;
    transition: all 130ms ease-in-out;
    min-width: 5px;
    width: 5px;
  }
  div.nav-toggle:hover{
    background-color: #777;
    -moz-transition: background-color .20s linear;
    -webkit-transition: background-color .20s linear;
    transition: background-color .20s linear;
  }
  div.nav-toggle.hide{
    cursor: e-resize;
    padding-left: 5px;
  }

  #main-container{
    overflow: hidden; //todo :clean the float
    min-height: 800px;
    padding: 10px 20px 0px 20px;
  }
}

@mixin loading{
  background: #FFF1A8 -webkit-gradient(linear,left top,left bottom,from(#FFE090),to(#FFF2B0));
  background-color: #FFF1A8;
  left: 50%;
  padding: 3px 6px;
  position: fixed;
  top: 0;
  z-index: 10000;
  padding: 3px 16px;
  font-weight: bold;
  border-radius: 0 0 5px 5px;
  -moz-border-radius: 0 0 5px 5px;
  -webkit-border-radius: 0 0 5px 5px;
  box-shadow: rgba(0,0,0,0.246094) 0px -3px 5px,rgba(0,0,0,0.246094) 0px 3px 5px;
  -moz-box-shadow: rgba(0,0,0,0.246094) 0px -3px 5px,rgba(0,0,0,0.246094) 0px 3px 5px;
  -webkit-box-shadow: rgba(0,0,0,0.246094) 0px -3px 5px,rgba(0,0,0,0.246094) 0px 3px 5px;

}

#loading-message{
  @include loading;
  color: black;
}

.footer{
  text-align: center;
  padding: 10px;
  border-top: 1px solid #CCC;
}

.home{
  .load{
    margin-top: 20px;
  }
  .projects{
    margin-top: 20px;
    th{
      text-align: center;
    }
    td{
      text-align: center;
      vertical-align: middle;
      p.count{
        font-size: 130%;
        font-weight: bold;
      }
      span.interval{
        font-weight: bold;
      }
      span.higher{
        font-weight: bold;
        color: #4B9525;
      }
      span.lower{
        font-weight: bold;
        color: #932D22;
      }
    }
  }
}

.admin{
  margin-top: 20px;
  .span4{
    text-align: center;
  }
}

